Added Baride ore block, still need to make it mineable with a pickaxe and actually drop exp and drops

--- a/src/main/resources/assets/terrafrostmod/lang/en_us.json
+++ b/src/main/resources/assets/terrafrostmod/lang/en_us.json
@@ -1,3 +1,7 @@
 {
-  "item.terrafrostmod.malachite": "Malachite"
+  "item.terrafrostmod.malachite": "Malachite",
+  "item.terrafrostmod.raw_baride": "Raw Baride",
+  "block.terrafrostmod.baride_ore_block": "Baride Ore",
+
+  "itemGroup.terrafrosttab": "TerraFrost"
 }
