Added Baride ore block, still need to make it mineable with a pickaxe and actually drop exp and drops

--- a/src/main/resources/assets/terrafrostmod/lang/en_us.json
+++ b/src/main/resources/assets/terrafrostmod/lang/en_us.json
@@ -1,7 +1,7 @@
 {
   "item.terrafrostmod.malachite": "Malachite",
-  "item.terrafrostmod.raw_baride": "Raw Baride",
-  "block.terrafrostmod.baride_ore_block": "Baride Ore",
+  "item.terrafrostmod.raw_bamide": "Raw Bamide",
+  "block.terrafrostmod.bamide_ore_block": "Bamide Ore",
 
   "itemGroup.terrafrosttab": "TerraFrost"
 }
