Bamide Ore Block now drops experience and Raw Bamide. Block of Bamide and Block of Raw Bamide have been added. Recipes for ingot smelting and recipes for blocks with bamide have been added. shapeless crafting blocks back into ingots and raw bamide have been added. + new textrures for bamide blocks now

--- a/src/main/resources/assets/terrafrostmod/lang/en_us.json
+++ b/src/main/resources/assets/terrafrostmod/lang/en_us.json
@@ -7,6 +7,7 @@
   "block.terrafrostmod.bamide_ore_block": "Bamide Ore",
   "block.terrafrostmod.raw_bamide_block": "Block of Raw Bamide",
   "block.terrafrostmod.bamide_block": "Block of Bamide",
+  "block.terrafrostmod.slush_block": "Slush",
 
 
   "itemGroup.terrafrosttab": "TerraFrost"
